--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap');
+
 .App {
   box-sizing: border-box;
   text-align: center;
-  margin: 20px;
-}
-
-.search-bar {
-  width: 250px;
-  height: 25px;
-  border: none;
-  border-radius: 20px;
-  padding: 10px;
-  background-color: antiquewhite;
-  margin: 10px;
+  height: 500px;
+  position: absolute;
+  top: calc(50% - 250px);
+  left: calc(50% - 150px);
+  font-family: 'Nunito', sans-serif;
 }
