--- a/src/components/Clock/Clock.css
+++ b/src/components/Clock/Clock.css
@@ -1,13 +1,17 @@
 .clock {
     font-weight: 400px;
     font-size: 25px;
-    background: #f5f5f56e;
-    width: fit-content;
+    background: #f5f5f5d1;
+    width: 300px;
     margin: auto;
     padding: 25px 60px;
     border-radius: 25px;
 }
 
 .clock h1 {
-    font-size: 80px;
+    font-size: 65px;
+}
+
+.clock p {
+    text-transform: capitalize;
 }
